--- a/base.css
+++ b/base.css
@@ -23,8 +23,8 @@ div {
     border-radius: 25px;
     padding: 10px;
     top: 0px;
-    width: 60%;
-    min-width: 600px;
+    max-width: 60%;
+    min-width: 400px;
 }
 
 .header {
@@ -36,11 +36,15 @@ div {
 
 .flexChild {
     flex: 1;
+    width: 40%;
 }
 
 
 .content {
-    margin: 0px 100px 75px 100px;
+    margin: auto;
+    padding: 0px 10px 75px 10px;
+    max-width: 600px;
+    min-width: 250px;
 }
 
 footer {
@@ -51,7 +55,7 @@ footer {
     border-top-left-radius: 25px;
     padding: 10px;
     width: 60%;
-    min-width: 600px;
+    min-width: 250px;
 }
 
 img {
