--- a/base.css
+++ b/base.css
@@ -23,26 +23,34 @@ div {
     border-radius: 25px;
     padding: 10px;
     top: 0px;
-    max-width: 60%;
+    width: 60%;
+    max-width: 1200px;
     min-width: 400px;
 }
 
 .header {
-    height: 100vh;
     display: flex;
-    flex-flow: center;
-    align-self: auto;
+    justify-content: center;
+    align-items: center;
+    height:100vh; 
+}
+
+.flexBox {
+    display: flex;
+    flex-flow: row wrap;
+    max-width: 800px;
+    justify-content: center;
 }
 
 .flexChild {
-    flex: 1;
-    width: 40%;
+    align-self: center;
+    padding: 0px 10px 0px 10px;
 }
-
 
 .content {
     margin: auto;
     padding: 0px 10px 75px 10px;
+    width: 80%;
     max-width: 600px;
     min-width: 250px;
 }
@@ -55,11 +63,13 @@ footer {
     border-top-left-radius: 25px;
     padding: 10px;
     width: 60%;
-    min-width: 250px;
+    max-width: 1200px;
+    min-width: 400px;
 }
 
 img {
     border-radius: 25px;
+    width: 300px;
 }
 
 /* typography */
@@ -94,7 +104,7 @@ button {
     background-color: #fdabab;
     color: #fdabab;
     border: none;
-    width: 250px;
+    width: 300px;
 }
 
 .button1:hover {
