--- a/base.css
+++ b/base.css
@@ -102,13 +102,14 @@ button {
 
 .button1 {
     background-color: #fdabab;
-    color: #fdabab;
-    border: none;
+    color: white;
+    border: 2px solid #fdabab;
     width: 300px;
 }
 
 .button1:hover {
-    color: white;
+    background-color: rgba(255, 255, 255, 0);
+    color: black;
 }
 
 .button2 {
