--- a/base.css
+++ b/base.css
@@ -14,10 +14,6 @@ body {
     height: 100%;
 }
 
-div {
-    margin: auto;
-}
-
 .main {
     background-color: white;
     border-radius: 25px;
@@ -26,6 +22,7 @@ div {
     width: 60%;
     max-width: 1200px;
     min-width: 400px;
+    margin: auto;
 }
 
 .header {
@@ -45,6 +42,9 @@ div {
 .flexChild {
     align-self: center;
     padding: 0px 10px 0px 10px;
+
+    display:flex; 
+    flex-direction: column;
 }
 
 .content {
