--- a/base.css
+++ b/base.css
@@ -12,16 +12,17 @@ html {
 
 body {
     height: 100%;
+    width: auto;
+    margin: auto;
 }
 
 .main {
     background-color: white;
     border-radius: 25px;
     padding: 10px;
-    top: 0px;
     width: 60%;
     max-width: 1200px;
-    min-width: 400px;
+    min-width: 370px;
     margin: auto;
 }
 
@@ -64,7 +65,7 @@ footer {
     padding: 10px;
     width: 60%;
     max-width: 1200px;
-    min-width: 400px;
+    min-width: 370px;
 }
 
 img {
